--- a/abnreports.html
+++ b/abnreports.html
@@ -441,6 +441,10 @@
 <div class="form-group"><label>遡り *</label>
   <input type="text" id="traceback" required placeholder="例: 300個廃却　品質判断より生産分流動 など">
 </div>
+         <div class="form-group">
+  <label>品質対応</label>
+  <textarea id="qualityResponse" placeholder="品質判定履歴・備考など"></textarea>
+</div>
           <div class="form-group"><label>技術対応 *</label>
             <select id="techRequest" required>
               <option value="">選択</option><option value="要請">技術対応あり</option><option value="完結">完了</option>
@@ -1167,7 +1171,7 @@ document.addEventListener('click', (e)=>{
    const HEADER_MAP = {
     '整理No':'serialNo','部署':'department','ライン名':'lineName','発生日':'occurrenceDate',
     '発生時刻':'occurrenceTime','再開時刻':'restartTime','異常内容':'anomalyContent','対応内容':'actionTaken',
-    '遡り':'traceback','処置者':'handler','技術対応':'techRequest','技術対応区分':'techRequest',
+    '遡り':'traceback','品質対応':'qualityResponse','処置者':'handler','技術対応':'techRequest','技術対応区分':'techRequest',
     '技術処置者':'techHandler','発見タイミング':'discoveryTiming','前回終物確認':'previousCheck',
     '命数有無':'lifespan','命数到達':'lifespanReached','保全単位':'maintenanceUnit',
     '技術対応内容':'rootCauseAction','再発新規':'recurrenceType','対策状況':'measureStatus',
@@ -1212,7 +1216,7 @@ const rows = anomalyCache.map(item=>{
     item.serialNo||'', item.department||'', item.lineName||'',
     item.occurrenceDate||'', item.occurrenceTime||'', item.restartTime||'',
     (stopMin!==null?stopMin:''),
-    item.anomalyContent||'', item.actionTaken||'', item.traceback||'', item.handler||'',
+    item.anomalyContent||'', item.actionTaken||'', item.traceback||'',　item.qualityResponse||'', item.handler||'',
     // 技術対応区分
     item.techRequest==='要請'?'技術対応あり':item.techRequest==='完結'?'完了':'',
     item.techHandler||'', item.discoveryTiming||'', item.previousCheck||'',
@@ -1927,6 +1931,7 @@ document.getElementById('manufacturingForm').addEventListener('submit', async (e
       anomalyContent: document.getElementById('anomalyContent').value,
       actionTaken: document.getElementById('actionTaken').value,
       traceback: document.getElementById('traceback').value,
+     qualityResponse: document.getElementById('qualityResponse').value || '',
       handler: document.getElementById('handler').value,
       techRequest: techReq,
       status: techReq === '完結' ? 'complete' : 'pending',
@@ -2145,17 +2150,23 @@ document.getElementById('technicalForm').addEventListener('submit', async (e) =>
           </div>
         `;
 
-        const centerHtml = `
-          <div class="card-center">
-            <div class="card-content-section">
-              <div class="card-content-label">🚨 異常内容</div>
-              <div class="card-content-text">${item.anomalyContent||'-'}</div>
-            </div>
-            <div class="card-content-section">
-              <div class="card-content-label">🔧 対応内容</div>
-              <div class="card-content-text">${item.actionTaken||'-'}</div>
-            </div>
-            ${item.status==='complete' && item.techRequest==='要請' ? `
+const centerHtml = `
+  <div class="card-center">
+    <div class="card-content-section">
+      <div class="card-content-label">🚨 異常内容</div>
+      <div class="card-content-text">${item.anomalyContent||'-'}</div>
+    </div>
+    <div class="card-content-section">
+      <div class="card-content-label">🔧 対応内容</div>
+      <div class="card-content-text">${item.actionTaken||'-'}</div>
+    </div>
+    ${item.qualityResponse ? `
+      <div class="card-content-section">
+        <div class="card-content-label">✅ 品質対応</div>
+        <div class="card-content-text">${item.qualityResponse}</div>
+      </div>
+    ` : ''}
+    ${item.status==='complete' && item.techRequest==='要請' ? `
               <div class="card-tech-info">
                 ${item.techHandler ? `<div class="tech-info-item"><span class="tech-info-label">技術処置者:</span><span class="tech-info-value">${item.techHandler}</span></div>` : ''}
                 ${item.maintenanceUnit ? `<div class="tech-info-item"><span class="tech-info-label">保全単位:</span><span class="tech-info-value">${item.maintenanceUnit}</span></div>` : ''}
@@ -2230,7 +2241,7 @@ ${(item.recurrenceType==='再発' && item.measureStatus) ?
         <table style="min-width:2200px;">
           <thead><tr>
             <th>整理No</th><th>部署</th><th>ライン</th><th>発生日</th><th>発生時刻</th>
-            <th>再開時刻</th><th>停止時間(分)</th><th>異常内容</th><th>処置内容</th><th>遡り</th>
+            <th>再開時刻</th><th>停止時間(分)</th><th>異常内容</th><th>処置内容</th><th>遡り</th><th>品質対応</th>
             <th>処置者</th><th>技術対応</th><th>技術処置者</th><th>発見タイミング</th><th>前回終物確認</th>
             <th>命数有無</th><th>命数到達</th><th>保全単位</th><th>技術対応</th><th>再発新規</th><th>対策状況</th>
             <th>暫定</th><th>写真</th><th>状態</th><th>操作</th>
@@ -2253,6 +2264,7 @@ ${(item.recurrenceType==='再発' && item.measureStatus) ?
                   <td style="min-width:150px;">${(it.anomalyContent||'-').slice(0,50)}${(it.anomalyContent||'').length>50?'...':''}</td>
                   <td style="min-width:150px;">${(it.actionTaken||'-').slice(0,50)}${(it.actionTaken||'').length>50?'...':''}</td>
                   <td>${it.traceback||'-'}</td>
+                  <td style="min-width:150px;">${(it.qualityResponse||'-').slice(0,50)}${(it.qualityResponse||'').length>50?'...':''}</td>
                   <td>${it.handler||'-'}</td>
                   <td>${it.techRequest==='要請'?'技術対応':it.techRequest==='完結'?'製造完結':'-'}</td>
                   <td>${it.techHandler||'-'}</td>
@@ -2526,6 +2538,7 @@ const editModalHtml = `
       <div class="form-group"><label>異常内容 *</label><textarea id="edit_anomalyContent"></textarea></div>
       <div class="form-group"><label>対応内容 *</label><textarea id="edit_actionTaken"></textarea></div>
       <div class="form-group"><label>遡り *</label><input type="text" id="edit_traceback"></div>
+      <div class="form-group"><label>品質対応</label><textarea id="edit_qualityResponse" placeholder="品質判定履歴・備考など"></textarea></div>
       <div class="form-group"><label>技術対応 *</label><select id="edit_techRequest"><option value="">選択</option><option value="要請">技術対応あり</option><option value="完結">完了</option></select></div>
     </div>
     <div id="editTech" class="edit-pane" style="display:none;">
@@ -2654,6 +2667,7 @@ function openEdit(id){
     document.getElementById('edit_anomalyContent').value = rec.anomalyContent||'';
     document.getElementById('edit_actionTaken').value = rec.actionTaken||'';
     document.getElementById('edit_traceback').value = rec.traceback||'';
+   document.getElementById('edit_qualityResponse').value = rec.qualityResponse||'';
     document.getElementById('edit_techRequest').value = rec.techRequest||'';
     document.getElementById('edit_techHandler').value = rec.techHandler||'';
     document.getElementById('edit_discoveryTiming').value = rec.discoveryTiming||'';
@@ -2762,6 +2776,7 @@ document.getElementById('btnEditSave').addEventListener('click', async () => {
       anomalyContent: document.getElementById('edit_anomalyContent').value||'',
       actionTaken: document.getElementById('edit_actionTaken').value||'',
       traceback: document.getElementById('edit_traceback').value||'',
+     qualityResponse: document.getElementById('edit_qualityResponse').value||'',
       techRequest: document.getElementById('edit_techRequest').value||'',
       techHandler: document.getElementById('edit_techHandler').value||'',
       discoveryTiming: document.getElementById('edit_discoveryTiming').value||'',
