--- a/abnreports.html
+++ b/abnreports.html
@@ -361,15 +361,15 @@
 
   <div class="container" style="display:none" id="appRoot">
     <div class="tabs">
-      <button class="tab active" data-tab="manufacturing">製造入力</button>
+      <button class="tab active" data-tab="manufacturing">発信部署入力</button>
       <button class="tab" data-tab="technical">技術入力</button>
       <button class="tab" data-tab="history">履歴</button>
       <button class="tab" data-tab="master">⚙️ 管理</button>
     </div>
 
-    <!-- 製造入力 -->
+    <!-- 発信部署入力 -->
     <div id="manufacturing" class="tab-content active">
-      <h2 style="margin-bottom:16px;color:#667eea;">製造部門 - 異常報告</h2>
+      <h2 style="margin-bottom:16px;color:#667eea;">異常報告</h2>
       <form id="manufacturingForm">
         <div style="background:#f0f7ff;padding:15px;border-radius:6px;margin-bottom:14px;">
           <h3 style="color:#667eea;margin-bottom:12px;font-size:1.05rem;">📅 いつ</h3>
@@ -403,7 +403,7 @@
 
         <div style="background:#fff4e6;padding:15px;border-radius:6px;margin-bottom:14px;">
           <h3 style="color:#f57c00;margin-bottom:12px;font-size:1.05rem;">📍 どこで</h3>
-          <div class="form-group"><label>部署 *</label><select id="department" required></select></div>
+          <div class="form-group"><label>発信部署 *</label><select id="department" required></select></div>
           <div class="form-group"><label>ライン名 *</label><select id="lineName" required><option value="">部署を先に選択してください</option></select></div>
           <div class="form-group"><label>処置者 *</label><select id="handler" required><option value="">部署を先に選択してください</option></select></div>
         </div>
@@ -495,7 +495,7 @@
       </div>
 
       <div id="selectedDataDisplay" style="background:#f8f9ff;padding:15px;border-radius:6px;margin-bottom:14px;display:none;">
-        <h3 style="color:#667eea;margin-bottom:8px;">製造部門入力内容</h3>
+        <h3 style="color:#667eea;margin-bottom:8px;">発信部署入力内容</h3>
         <div id="displayContent"></div>
       </div>
 
@@ -899,7 +899,7 @@ function resetPaging(){
   isLoadingMore = false;
 }
 
-// 製造タブの更新：マスタ再取得＋シリアル候補再構築
+// 発信部署タブの更新：マスタ再取得＋シリアル候補再構築
 async function refreshManufacturing(){
   mastersCache = null;
   mastersCache = await fetchMasters();
@@ -963,7 +963,7 @@ async function refreshMaster(){
 // （onAuthStateChanged -> bootAfterLogin 後なら要素が存在）
 document.addEventListener('click', (e)=>{
   if (e.target && e.target.id === 'btnRefreshMfg'){
-    (async ()=>{ await refreshManufacturing(); alert('製造タブを更新しました'); })();
+    (async ()=>{ await refreshManufacturing(); alert('発信部署タブを更新しました'); })();
   }
   if (e.target && e.target.id === 'btnRefreshTech'){
     (async ()=>{ await refreshTechnical(); alert('技術タブを更新しました'); })();
@@ -1900,7 +1900,7 @@ async function uploadPhotos(docId, kind, items) {
   return urls;
 }
 
-// 製造フォーム送信（二重送信防止版）
+// 発信部署フォーム送信（二重送信防止版）
 let isSubmittingMfg = false;
 
 document.getElementById('manufacturingForm').addEventListener('submit', async (e) => {
@@ -2104,7 +2104,7 @@ document.getElementById('technicalForm').addEventListener('submit', async (e) =>
       cardWrap.innerHTML = items.map((item)=>{
         const status = item.status==='pending'
           ? {text:'技術入力待ち',cls:'status-pending'}
-          : (item.techRequest==='完結' ? {text:'完了（製造完結）',cls:'status-complete'} : {text:'完了',cls:'status-complete'});
+          : (item.techRequest==='完結' ? {text:'完了（発信部署完結）',cls:'status-complete'} : {text:'完了',cls:'status-complete'});
 
         const allPhotos = [ ...(item.mfgPhotoUrls || []), ...(item.techPhotoUrls || []) ];
         const stopMin = calcStopMinutes(item);
@@ -2266,7 +2266,7 @@ ${(item.recurrenceType==='再発' && item.measureStatus) ?
                   <td>${it.traceback||'-'}</td>
                   <td style="min-width:150px;">${(it.qualityResponse||'-').slice(0,50)}${(it.qualityResponse||'').length>50?'...':''}</td>
                   <td>${it.handler||'-'}</td>
-                  <td>${it.techRequest==='要請'?'技術対応':it.techRequest==='完結'?'製造完結':'-'}</td>
+                  <td>${it.techRequest==='要請'?'技術対応':it.techRequest==='完結'?'発信部署完結':'-'}</td>
                   <td>${it.techHandler||'-'}</td>
                   <td>${it.discoveryTiming||'-'}</td>
                   <td>${it.previousCheck||'-'}</td>
@@ -2524,7 +2524,7 @@ const editModalHtml = `
   <div class="modal-content" style="max-width:800px;">
     <div class="modal-title">✏️ 履歴レコード編集</div>
     <div class="edit-tabs">
-      <button class="edit-tab active" data-edit-tab="mfg">製造</button>
+      <button class="edit-tab active" data-edit-tab="mfg">発信部署</button>
       <button class="edit-tab" data-edit-tab="tech">技術</button>
       <button class="edit-tab" data-edit-tab="photos">写真</button>
     </div>
@@ -2586,11 +2586,11 @@ const editModalHtml = `
     </div>
     <div id="editPhotos" class="edit-pane" style="display:none;">
       <div style="margin-bottom:20px;">
-        <h4 style="color:#667eea;margin-bottom:10px;">📸 製造部門の写真</h4>
+        <h4 style="color:#667eea;margin-bottom:10px;">📸 発信部署部門の写真</h4>
         <div id="edit_mfgPhotosList" style="display:grid;grid-template-columns:repeat(auto-fill,minmax(100px,1fr));gap:10px;margin-bottom:15px;"></div>
         <div class="photo-upload" onclick="document.getElementById('edit_mfgPhotos').click()">
           <div style="font-size:1.5rem;">📸</div>
-          <p style="font-size:.9rem;">製造写真を追加</p>
+          <p style="font-size:.9rem;">発信部署写真を追加</p>
           <input type="file" id="edit_mfgPhotos" accept="image/*" multiple style="display:none;">
         </div>
         <div id="edit_mfgPhotoPreview" class="photo-preview"></div>
@@ -2819,7 +2819,7 @@ document.getElementById('btnEditSave').addEventListener('click', async () => {
     
     // 新しい写真をアップロード
     if (editMfgPhotos.length > 0) {
-      saveBtn.textContent = `製造写真アップロード中... (${editMfgPhotos.length}枚)`;
+      saveBtn.textContent = `発信部署写真アップロード中... (${editMfgPhotos.length}枚)`;
       const newUrls = await uploadPhotos(editCurrentId, 'mfg', editMfgPhotos);
       remainingMfgUrls = [...remainingMfgUrls, ...newUrls];
     }
@@ -2919,7 +2919,7 @@ async function deleteRecord(id){
     const content = document.getElementById('photoModalContent');
     let html = '';
     if (item.mfgPhotoUrls && item.mfgPhotoUrls.length > 0){
-      html += '<div style="grid-column:1/-1;"><h4 style="color:#667eea;margin-bottom:10px;">製造部門の写真</h4></div>';
+      html += '<div style="grid-column:1/-1;"><h4 style="color:#667eea;margin-bottom:10px;">発信部署部門の写真</h4></div>';
       item.mfgPhotoUrls.forEach(url => {
         html += `<div style="position:relative;aspect-ratio:1;border-radius:8px;overflow:hidden;box-shadow:0 2px 8px rgba(0,0,0,.1);">
           <img src="${url}" style="width:100%;height:100%;object-fit:cover;cursor:pointer;" onclick="window.open('${url}','_blank')">
@@ -2964,7 +2964,7 @@ async function deleteRecord(id){
         </div>
       </div>
       <div style="background:#fff4e6;padding:20px;border-radius:8px;margin-bottom:20px;">
-        <h4 style="color:#f57c00;margin-bottom:15px;">🔧 製造部門の対応</h4>
+        <h4 style="color:#f57c00;margin-bottom:15px;">🔧 発信部署の対応</h4>
         <div style="display:grid;gap:12px;">
           <div><strong>異常内容:</strong><div style="background:#fff;padding:12px;border-radius:6px;margin-top:8px;white-space:pre-wrap;">${item.anomalyContent || '-'}</div></div>
           <div><strong>対応内容:</strong><div style="background:#fff;padding:12px;border-radius:6px;margin-top:8px;white-space:pre-wrap;">${item.actionTaken || '-'}</div></div>
@@ -2991,7 +2991,7 @@ async function deleteRecord(id){
         <div style="background:#e3f2fd;padding:20px;border-radius:8px;">
           <h4 style="color:#1976d2;margin-bottom:15px;">📷 写真</h4>
           ${item.mfgPhotoUrls?.length ? `
-            <div style="margin-bottom:8px;color:#667eea;font-weight:bold;">製造部門</div>
+            <div style="margin-bottom:8px;color:#667eea;font-weight:bold;">発信部署部門</div>
             <div class="similar-photos">
               ${item.mfgPhotoUrls.map(u=>`<div class="thumb" onclick="window.open('${u}','_blank')"><img src="${u}" alt=""></div>`).join('')}
             </div>`:''}
