--- a/abnreports.html
+++ b/abnreports.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>異常履歴入力ツール（Firebase連携版）</title>
+<title>異常履歴入力ツール</title>
 <style>
   *{margin:0;padding:0;box-sizing:border-box}
   body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI','Hiragino Sans',sans-serif;background:#f5f5f5}
@@ -356,7 +356,6 @@
 
   <div class="header">
     <h1>📋 異常履歴入力ツール</h1>
-    <p>Firebase連携版（Auth / Firestore / Storage）</p>
   </div>
 
   <div class="container" style="display:none" id="appRoot">
