--- a/abnview.html
+++ b/abnview.html
@@ -194,6 +194,14 @@
           <label>終了日</label>
           <input type="date" id="endDate">
         </div>
+       <div class="control-group">
+  <label>絞り込み</label>
+  <label style="display:flex;align-items:center;gap:8px;">
+    <input type="checkbox" id="moldTechOnly">
+    金型技術のみ（保全単位1以上）
+  </label>
+</div>
+
         <div class="control-group">
           <label>部署フィルター</label>
           <select id="deptFilter">
@@ -563,6 +571,19 @@
         let filtered = allData.filter(x=> x.occurrenceDate && x.occurrenceDate >= startDate && x.occurrenceDate <= endDate);
         if(dept) filtered = filtered.filter(x=> x.department === dept);
 
+/* ▼ 追加：金型技術のみ（保全単位1以上） */
+const moldTechOnly = document.getElementById('moldTechOnly').checked;
+if (moldTechOnly) filtered = filtered.filter(x => Number(x?.maintenanceUnit ?? 0) >= 1);
+
+// 先月（比較用）
+const startD = new Date(startDate);
+const lastMonthStart = formatDate(new Date(startD.getFullYear(), startD.getMonth() - 1, startD.getDate()));
+const lastMonthEnd = formatDate(new Date(startD.getTime() - 24*60*60*1000));
+let lastMonthData = allData.filter(x=> x.occurrenceDate && x.occurrenceDate >= lastMonthStart && x.occurrenceDate <= lastMonthEnd);
+if(dept) lastMonthData = lastMonthData.filter(x=> x.department === dept);
+
+/* ▼ 追加：金型技術のみ（保全単位1以上）を先月側にも */
+if (moldTechOnly) lastMonthData = lastMonthData.filter(x => Number(x?.maintenanceUnit ?? 0) >= 1);
         // 先月（比較用）
         const startD = new Date(startDate);
         const lastMonthStart = formatDate(new Date(startD.getFullYear(), startD.getMonth() - 1, startD.getDate()));
@@ -603,7 +624,7 @@
       restartTime:'再開時刻', handler:'処置者', techRequest:'技術要請', discoveryTiming:'発見タイミング',
       defectType:'不良区分', cause:'原因', countermeasure:'対策', lotNo:'ロットNo',
       quantity:'数量', unit:'単位', location:'発生場所', reporter:'記録者', createdAt:'作成日',
-      updatedAt:'更新日', equipment:'設備', lineStop:'停止有無', photoUrl:'写真URL', photoUrls:'写真URL一覧'
+      updatedAt:'更新日', equipment:'設備', lineStop:'停止有無', photoUrl:'写真URL', photoUrls:'写真URL一覧',maintenanceUnit:'保全単位'
     };
 
     // すべてのキーを収集
@@ -669,6 +690,8 @@
     const dept = document.getElementById('deptFilter').value;
     let data = allData.filter(x=> x.occurrenceDate && x.occurrenceDate >= startDate && x.occurrenceDate <= endDate);
     if(dept) data = data.filter(x=> x.department === dept);
+const moldTechOnly = document.getElementById('moldTechOnly')?.checked;
+if (moldTechOnly) data = data.filter(x => Number(x?.maintenanceUnit ?? 0) >= 1);
 
     if(dataSheetCurrentSortKey === key){
       // 解除（元に戻す）
