--- a/abnview.html
+++ b/abnview.html
@@ -421,8 +421,6 @@
       allData = rawData.filter(x => x.occurrenceDate);
       allData.sort((a,b) => (b.occurrenceDate||'').localeCompare(a.occurrenceDate||''));
 
-      updateDebugInfo(rawData, allData);
-
       // 部署リスト
       const depts = [...new Set(allData.map(x=>x.department).filter(Boolean))].sort();
       const deptSelect = document.getElementById('deptFilter');
@@ -500,7 +498,8 @@
     
     document.getElementById('btnAnalyze').addEventListener('click', runAnalysis);
     document.getElementById('serialNoSelect').addEventListener('change', showSerialNoDetail);
-    document.getElementById('btnReload').addEventListener('click', reloadData);
+const reloadBtn = document.getElementById('btnReload');
+if (reloadBtn) reloadBtn.addEventListener('click', reloadData);
     document.getElementById('btnExportCSV').addEventListener('click', exportCSV);
 
     // ヘッダーのソートボタン（Top10は静的に存在）
