--- a/abnview.html
+++ b/abnview.html
@@ -718,77 +718,46 @@ if (moldTechOnly) lastMonthData = lastMonthData.filter(x => Number(x?.maintenanc
     データシート（全項目表示）
   ========================*/
 function buildDataSheetColumns(data){
-  // ✅ データシートから除外する項目
-  const exclude = new Set([
-    'status',
-    '_firebaseId',
 
-    // ▼あなたの要望で削除
-    'completedAt',
-    'createdAt',
-    'techPhotoUrls'
-  ]);
-
-  // ✅ 優先表示項目
-  const basePreferred = [
-    'occurrenceDate','department','lineName','serialNo',
-    'anomalyContent','actionTaken','occurrenceTime','restartTime',
-    'handler','techRequest','stopMinutes','discoveryTiming'
+  // ✅ 固定で表示する列だけ定義（順番も固定）
+  dataSheetColumns = [
+    'occurrenceDate',    // 発生日
+    'lineName',          // ライン名
+    'serialNo',          // 整理No
+    'anomalyContent',    // 異常内容
+    'actionTaken',       // 対応内容
+    'occurrenceTime',    // 発生時刻
+    'restartTime',       // 再開時刻
+    'handler',           // 処置者
+    'stopMinutes',       // 停止時間(分) ※派生列
+    'discoveryTiming',   // 発見タイミング
+    'rootCauseAction'    // 是正処置
   ];
 
-  // ✅ 日本語ラベル（不足分すべて追加）
-  const labels = {
-    occurrenceDate:'発生日',
-    department:'部署',
-    lineName:'ライン名',
-    serialNo:'整理No',
-    anomalyContent:'異常内容',
-    actionTaken:'対応内容',
-    occurrenceTime:'発生時刻',
-    restartTime:'再開時刻',
-    handler:'処置者',
-    techRequest:'技術要請',
-    stopMinutes:'停止時間(分)',
-    discoveryTiming:'発見タイミング',
-
-    // 追加の日本語化
-    rootCauseAction:'是正処置',
-    affirmation:'是正確認',
-    qualityResponse:'品質対応',
-    previousCheck:'過去点検/横展',
-    lifespanReached:'寿命到達',
-    traceback:'トレースバック',
-    maintenanceUnit:'保全単位',
-    lifespan:'寿命',
-    measureStatus:'対策状況',
-    techHandler:'技術担当者',
-    mfgPhotoUrls:'製造写真URL一覧',
-    recurrenceType:'再発分類'
+  // ✅ 日本語ラベル定義
+  dataSheetColumnLabels = {
+    occurrenceDate: '発生日',
+    lineName: 'ライン名',
+    serialNo: '整理No',
+    anomalyContent: '異常内容',
+    actionTaken: '対応内容',
+    occurrenceTime: '発生時刻',
+    restartTime: '再開時刻',
+    handler: '処置者',
+    stopMinutes: '停止時間(分)',
+    discoveryTiming: '発見タイミング',
+    rootCauseAction: '是正処置'
   };
 
-  // ✅ データのキー収集（除外対象を除く）
-  const keySet = new Set();
-  data.forEach(row=>{
-    Object.keys(row||{}).forEach(k=>{
-      if(!exclude.has(k)) keySet.add(k);
-    });
-  });
-
-  // ✅ すべての列（優先 → その他）
-  const keysAll = Array.from(keySet);
-  const others = keysAll.filter(k => !basePreferred.includes(k));
-  dataSheetColumns = [...basePreferred, ...others];
-
-  // ✅ ラベル保存
-  dataSheetColumnLabels = labels;
-
-  // ✅ ヘッダー生成
+  // ✅ ヘッダー生成（▲ソート対応）
   const headRow = document.getElementById('dataSheetHeadRow');
- headRow.innerHTML = dataSheetColumns.map(k=>{
-  const label = (dataSheetColumnLabels[k] || k);
-  return `<th data-col="${k}">${label} <button class="sort-btn" data-table="sheet" data-key="${k}">▲</button></th>`;
-}).join('');
-
+  headRow.innerHTML = dataSheetColumns.map(col=>{
+    const label = dataSheetColumnLabels[col] || col;
+    return `<th data-col="${col}">
+      ${label}
+      <button class="sort-btn" data-table="sheet" data-key="${col}">▲</button>
+    </th>`;
+  }).join('');
 
   dataSheetOriginalOrder = null;
   dataSheetCurrentSortKey = null;
