--- a/abnview.html
+++ b/abnview.html
@@ -344,22 +344,27 @@ th[data-col="traceback"],        td[data-col="traceback"]{ width:260px; }
     <!-- データシートビュー -->
     <div id="sheetView" style="display:none;">
       <div class="table-container">
-        <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:15px;">
-          <h3 style="color:#333;font-size:1.2rem;margin:0;">📋 異常履歴データシート（全項目表示・状態は除外）</h3>
-          <div>
-            <button id="btnExportCSV" style="padding:10px 20px;background:#28a745;color:#fff;border:none;border-radius:6px;font-weight:bold;cursor:pointer;">
-              📥 CSV出力
-            </button>
-<div style="display:flex;gap:8px;align-items:center;flex-wrap:wrap;">
-  <div style="font-size:.85rem;color:#555;">表示密度:</div>
-  <button id="denseNormal"  class="date-btn" style="padding:6px 10px;">標準</button>
-  <button id="denseCompact" class="date-btn" style="padding:6px 10px;">高密度</button>
-  <button id="denseUltra"   class="date-btn" style="padding:6px 10px;">超高密度</button>
+<div style="display:flex;justify-content:space-between;align-items:center;gap:10px;flex-wrap:wrap;margin-bottom:15px;">
+  <h3 style="color:#333;font-size:1.2rem;margin:0;">📋 異常履歴データシート（全項目表示・状態は除外）</h3>
 
-  <label style="display:flex;align-items:center;gap:6px;margin-left:10px;font-size:.9rem;">
-    <input type="checkbox" id="toggleClamp" checked>
-    長文を3行で折りたたむ
-  </label>
+  <!-- 右側コントロールをひとまとめ -->
+  <div style="display:flex;align-items:center;gap:10px;flex-wrap:wrap;">
+    <button id="btnExportCSV" style="padding:10px 20px;background:#28a745;color:#fff;border:none;border-radius:6px;font-weight:bold;cursor:pointer;">
+      📥 CSV出力
+    </button>
+
+    <div style="display:flex;gap:8px;align-items:center;">
+      <div style="font-size:.85rem;color:#555;">表示密度:</div>
+      <button id="denseNormal"  class="date-btn" style="padding:6px 10px;">標準</button>
+      <button id="denseCompact" class="date-btn" style="padding:6px 10px;">高密度</button>
+      <button id="denseUltra"   class="date-btn" style="padding:6px 10px;">超高密度</button>
+    </div>
+
+    <label style="display:flex;align-items:center;gap:6px;font-size:.9rem;white-space:nowrap;">
+      <input type="checkbox" id="toggleClamp" checked>
+      長文を3行で折りたたむ
+    </label>
+  </div>
 </div>
 
            
@@ -718,8 +723,7 @@ if (moldTechOnly) lastMonthData = lastMonthData.filter(x => Number(x?.maintenanc
     データシート（全項目表示）
   ========================*/
 function buildDataSheetColumns(data){
-
-  // ✅ 固定で表示する列だけ定義（順番も固定）
+  // ▼ この順で固定表示
   dataSheetColumns = [
     'occurrenceDate',    // 発生日
     'lineName',          // ライン名
@@ -729,12 +733,12 @@ function buildDataSheetColumns(data){
     'occurrenceTime',    // 発生時刻
     'restartTime',       // 再開時刻
     'handler',           // 処置者
-    'stopMinutes',       // 停止時間(分) ※派生列
+    'stopMinutes',       // 停止時間(分) ※派生
     'discoveryTiming',   // 発見タイミング
     'rootCauseAction'    // 是正処置
   ];
 
-  // ✅ 日本語ラベル定義
+  // ▼ 日本語ラベル
   dataSheetColumnLabels = {
     occurrenceDate: '発生日',
     lineName: 'ライン名',
@@ -749,13 +753,12 @@ function buildDataSheetColumns(data){
     rootCauseAction: '是正処置'
   };
 
-  // ✅ ヘッダー生成（▲ソート対応）
+  // ▼ ヘッダー生成（data-col 付き）
   const headRow = document.getElementById('dataSheetHeadRow');
-  headRow.innerHTML = dataSheetColumns.map(col=>{
+  headRow.innerHTML = dataSheetColumns.map(col => {
     const label = dataSheetColumnLabels[col] || col;
     return `<th data-col="${col}">
-      ${label}
-      <button class="sort-btn" data-table="sheet" data-key="${col}">▲</button>
+      ${label} <button class="sort-btn" data-table="sheet" data-key="${col}">▲</button>
     </th>`;
   }).join('');
 
