--- a/abnview.html
+++ b/abnview.html
@@ -544,13 +544,13 @@
     });
 
     // 月選択
-    document.getElementById('monthSelect').addEventListener('change', (e)=>{
-      const [year, month] = e.target.value.split('-').map(Number);
-      const s = formatDate(new Date(year, month - 1, 1));
-      const e = formatDate(new Date(year, month, 0));
-      document.getElementById('startDate').value = s;
-      document.getElementById('endDate').value = e;
-    });
+ document.getElementById('monthSelect').addEventListener('change', (ev)=>{
+   const [year, month] = ev.target.value.split('-').map(Number);
+   const s = formatDate(new Date(year, month - 1, 1));
+   const endStr = formatDate(new Date(year, month, 0));
+   document.getElementById('startDate').value = s;
+   document.getElementById('endDate').value = endStr;
+ });
 
     // ビュー切替
     document.querySelectorAll('.view-tab').forEach(tab=>{
